<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="referViewModel"
            type="com.aj.noteappajkotlinmvvm.fragments.refer.ReferViewModel" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.refer.ReferFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_title"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btn_whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whatsapp_btn"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:onClick="@{() -> referViewModel.onWhatsAppShareClicked()}"/>

        <Button
            android:id="@+id/btn_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_btn"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:onClick="@{() -> referViewModel.shareTextMessageOnly()}"/>

        <Button
            android:id="@+id/btn_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_btn"
            android:textColor="@color/white"
            android:onClick="@{() -> referViewModel.sendEmail()}"/>


    </LinearLayout>

</FrameLayout>
</layout>