<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--  Created 'loginViewModel' for binding to ViewModel class 'LoginActivityViewModel' -->
    <data>
        <variable
            name="loginViewModel"
            type="com.aj.noteappajkotlinmvvm.activities.login.LoginActivityViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login.LoginActivity">

    <TextView
        android:id="@+id/txv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:text="@string/login_title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtxt_mobile_login"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="phone"
        android:maxLength="10"
        android:digits="1234567890"
        android:hint="@string/enter_mobile_number_hint"
        android:text="@={loginViewModel.inputMobileNo}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_title"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtxt_pwd"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_password_hint"
        android:text="@={loginViewModel.inputPassword}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_mobile_login"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/login_title"
        android:onClick="@{() -> loginViewModel.validateLoginUser()}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_mobile_login" />

    <ImageView
        android:id="@+id/iv_exit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/app_name" />


    <!--    <TextView
            android:id="@+id/textView"
            android:layout_width="70dp"
            android:layout_height="21dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/label_email"
            app:layout_constraintEnd_toStartOf="@+id/txtEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtEmail" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:text="@={loginViewModel.login.fields.email}"
            app:error="@{loginViewModel.login.emailError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:onFocus="@{loginViewModel.getEmailOnFocusChangeListener()}" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="70dp"
            android:layout_height="18dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/label_password"
            app:layout_constraintEnd_toStartOf="@+id/txtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPassword" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@={loginViewModel.login.fields.password}"
            app:error="@{loginViewModel.login.passwordError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            app:onFocus="@{loginViewModel.getPasswordOnFocusChangeListener()}" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="@{loginViewModel.login.valid}"
            android:text="@string/action_login"
            android:onClick="@{() -> loginViewModel.onButtonClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>